--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-mentions": "^4.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-toastify": "^7.0.4"
+    "react-toastify": "^7.0.4",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
