--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@loadable/component": "^5.15.0",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
@@ -42,5 +44,8 @@
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "browser": {
+    "crypto": false
   }
 }
