--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
+    "crypto-js": "^3.3.0",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
