--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@emotion/styled": "^11.3.0",
     "@loadable/component": "^5.15.0",
     "axios": "^0.21.1",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^3.3.0",
+    "express": "^4.17.1",
     "gravatar": "^1.8.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
