--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@loadable/component": "^5.15.0",
+    "antd": "^4.16.6",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
@@ -24,6 +26,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-mentions": "^4.3.0",
