--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^1.6.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
+    "react-js-pagination": "^3.0.3",
     "react-mentions": "^4.3.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
