--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-custom-scrollbars": "^4.2.1",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-js-pagination": "^3.0.3",
     "react-mentions": "^4.3.0",
