--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@loadable/component": "^5.15.0",
     "antd": "^4.16.6",
+    "autosize": "^5.0.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "cookie-parser": "^1.4.5",
