--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-stomp": "^5.1.0",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "sockjs-client": "^1.5.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
